overflow: hidden retirado do header para evitar bugs com a nav

--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -7,8 +7,7 @@
     left: 0;
     font-weight: 400;
     box-shadow: 0 4px 14px 0 rgb(0 0 0/10%);
-    overflow: hidden;
-    z-index: 1;
+    z-index: 9;
 }
 
 .container {
@@ -169,7 +168,7 @@ img {
         position: absolute;
         top: 70px;
         right: 0px;
-        z-index: 1;
+        z-index: 5;
         width: 100%;
         padding-left: 0;
     }
@@ -216,7 +215,7 @@ img {
         position: absolute;
         top: 70px;
         right: 0px;
-        z-index: 1;
+        z-index: 5;
         width: 100%;
         padding-left: 0;
     }
